[gd_scene load_steps=2 format=3 uid="uid://b64th1t6c3gxl"]

[ext_resource type="Script" uid="uid://27gd2ff6vlyo" path="res://Scenes/playlist_button.gd" id="1_sv771"]

[node name="PlaylistButton" type="Button"]
script = ExtResource("1_sv771")

[node name="PlaylistRow" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 2

[node name="MarginContainer" type="MarginContainer" parent="PlaylistRow"]
layout_mode = 2

[node name="Name" type="Label" parent="PlaylistRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "This name is too long but barely"
clip_text = true
text_overrun_behavior = 4

[node name="SongCount" type="Label" parent="PlaylistRow"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2
text = "12"
horizontal_alignment = 2

[node name="Length" type="Label" parent="PlaylistRow"]
custom_minimum_size = Vector2(12, 0)
layout_mode = 2
text = "22:14"
horizontal_alignment = 2

[node name="MarginContainer2" type="MarginContainer" parent="PlaylistRow"]
layout_mode = 2

[connection signal="pressed" from="." to="." method="_on_pressed"]
